# gst-project

./: .gitignore  CMakeLists.txt  README.md
src/: gst_stream_udp.cpp
